public class FixedTerrestrial extends ExtractorWithLocation {
    public FixedTerrestrial(int capacity, int quantity, String location) {
        super(capacity, quantity, location);
    }


}
