public interface Report {
    abstract boolean reportFaults();
}
